# warpforge

./: .gitignore  .workspace.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  install.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
crates/warpforge-protocol/: Cargo.toml
crates/warpforge-protocol/src/: lib.rs
desktop/: .gitignore  .oxfmtrc.json  .oxlintrc.json  REDESIGN_HANDOFF.md  components.json  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
desktop/scripts/: stage-sidecar.mjs
desktop/src/: App.tsx  daemon.test.ts  daemon.ts  demo.ts  globals.css  main.tsx  protocol.ts  query.ts  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: desktop_env.rs  main.rs  sidecar_log.rs
desktop/src/components/: AgentActivityIndicator.tsx  AgentBadge.tsx  AgentConfigBar.test.tsx  AgentConfigBar.tsx  AgentLogo.tsx  AgentSetupPanel.test.tsx  AgentSetupPanel.tsx  AgentTabButton.tsx  AppHeader.tsx  AttentionRail.tsx  AttentionToast.tsx  BootstrapReviewDialog.tsx  BootstrapWizard.tsx  ChangesRail.test.tsx  ChangesRail.tsx  ChatComposer.tsx  ChatTranscript.tsx  CodeEditor.tsx  CommitBox.tsx  Composer.test.tsx  Composer.tsx  ErrorBoundary.tsx  FileTree.tsx  Markdown.test.tsx  Markdown.tsx  MergeDiff.tsx  MessageActions.test.tsx  MessageActions.tsx  PermissionToast.tsx  RuntimePanel.test.tsx  RuntimePanel.tsx  (+12 more)
docs/: DAEMON_PLAN.md  RELEASE_AND_UPDATES.md  RELEASING.md  UI_CONCEPT.md
examples/demo/: .workspace.yaml
plans/: meta-harness-implementation.md
scripts/: check-release-version.mjs  mcp-smoke.sh
src/: agent.rs  app.rs  bootstrap.rs  config.rs  main.rs  mcp.rs  portforward.rs  ports.rs  registry.rs  service.rs
src/client/: mod.rs
src/daemon/: acp.rs  acp_server.rs  actor.rs  agent_probe.rs  agents.rs  diff.rs  mod.rs  prompt.rs  server.rs  sessions.rs  store.rs  task.rs  wire.rs  worktree.rs
src/orchestration/: config.rs  graph.rs  mod.rs
src/policies/: mod.rs  registry.rs
src/tui/: dashboard.rs  mod.rs  project.rs  terminal.rs  wire_terminal.rs
templates/: workspace.yaml
tests/fixtures/: mock-acp-agent-noedit.mjs  mock-acp-agent.mjs  mock-acp-inspect.mjs  mock-acp-recovery.mjs
(+109 files in other folders)
