[workspace]
members = ["crates/warpforge-protocol"]
# The Tauri app has heavy system-library deps (webkit2gtk etc.) — kept out of the
# main workspace so `cargo build` for the daemon/TUI never requires a GUI toolchain.
exclude = ["desktop/src-tauri"]
resolver = "2"

[package]
name = "warpforge"
version = "0.0.3"
edition = "2021"

[[bin]]
name = "warpforge"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
portable-pty = "0.8"
vt100 = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
futures = "0.3"
bytes = "1"
clap = { version = "4", features = ["derive"] }
tokio-tungstenite = "0.24"
rusqlite = { version = "0.32", features = ["bundled"] }
warpforge-protocol = { path = "crates/warpforge-protocol" }
